k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: barred-owl
  namespace: biodiversity
  labels:
    app: barred-owl
spec:
  type: ClusterIP
  selector:
    app: barred-owl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
